# SmallGamesInC

./: .clang-format  .gitignore  CMakeLists.txt  README.md
1 - FlappyBird/: CMakeLists.txt  main.c
1 - FlappyBird/include/: Objects.h
1 - FlappyBird/src/: Objects.c  main.c
2 - CrossingRoads/: CMakeLists.txt
2 - CrossingRoads/include/: Direction.h  Entities.h  Level.h  States.h
2 - CrossingRoads/src/: Level.c  main.c
2 - CrossingRoads/src/entities/: entities.c  obstacles.c  player.c
2 - CrossingRoads/src/states/: gameOverState.c  gameState.c  optionsState.c  startState.c  victoryState.c
engine/: CMakeLists.txt  doxyfile
engine/include/Engine/: Bindings.h  Options.h  Pair.h  StateManager.h
engine/src/: Bindings.c  Options.c  StateManager.c
engine/src/Engine/: StateManager.c
engine/tests/: .clang-format  Bindings.c  CMakeLists.txt  EngineTest.h  EngineTest_main.c  EngineTest_master.c  Options.c  StateManager.c
